Add some custom payloads

--- a/programs/hello-token/Cargo.toml
+++ b/programs/hello-token/Cargo.toml
@@ -21,4 +21,8 @@ default = ["testnet"]
 [dependencies]
 anchor-lang = { version = "0.28.0", features = ["init-if-needed"]}
 anchor-spl = "0.28.0"
+spl-math = { version = "0.2.0", features = ["no-entrypoint"] }
 wormhole-anchor-sdk = { path = "../../modules/wormhole-anchor-sdk", default-features = false, features = ["token-bridge"]}
+
+[dev-dependencies]
+hex-literal = "0.4.1"
